# logos-ide

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  SECURITY.md  Tier2-RustWasm-Plan.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: Check.yml  Release.yml  claude-code-review.yml  claude.yml
docs/: AEFANYL_ENGINE_PLAN.md  EXTENSION_HOST_POC_PLAN.md  github-app-pr.md  i18n-plan.md  incremental-update-design.md  plugin-system-design.md
docs/design/: mode-switching.md  phase2-smart-mode.md
electron/: extension-host-manager.ts  extension-host.ts  main.ts  preload.ts
electron/extension-host/: rpc-protocol.ts  vscode-api-stub.ts  vscode.ts
electron/services/: aiService.ts  fileService.ts  gitService.ts  githubAppService.ts  githubService.ts  intelligenceService.ts  languageDaemonHandlers.ts  languageDaemonService.ts  lspServerManager.ts  updateService.ts
electron/services/debug/: DAPClient.ts  debugService.ts  index.ts  ipcHandlers.ts  types.ts
electron/services/lsp/: LSPClient.ts  LSPClientManager.ts  index.ts  types.ts
logos-lang/: Cargo.toml  build.sh
logos-lang/crates/logos-core/: Cargo.toml
logos-lang/crates/logos-core/src/: diagnostic.rs  document.rs  lib.rs  position.rs  symbol.rs
logos-lang/crates/logos-daemon/: Cargo.toml
logos-lang/crates/logos-daemon/src/: main.rs  protocol.rs  server.rs  state.rs
logos-lang/crates/logos-daemon/src/handlers/: analysis.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  lifecycle.rs  mod.rs  refactor.rs  references.rs  rename.rs  symbols.rs
logos-lang/crates/logos-index/: Cargo.toml
logos-lang/crates/logos-index/src/: adapter.rs  incremental.rs  indexer.rs  inverted.rs  lib.rs  symbol_table.rs  typescript_adapter.rs
logos-lang/crates/logos-parser/: Cargo.toml
logos-lang/crates/logos-parser/src/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  lib.rs  python.rs  rust_lang.rs  typescript.rs
logos-lang/crates/logos-semantic/: Cargo.toml
logos-lang/crates/logos-semantic/src/: lib.rs  resolver.rs  scope.rs  type_infer.rs
logos-lang/crates/logos-wasm/: Cargo.toml
logos-lang/crates/logos-wasm/src/: api.rs  lib.rs
packaging/aur/: .SRCINFO  PKGBUILD  PKGBUILD.template  README.md
packaging/homebrew/: logos.rb.template
packaging/windows/: Logos.iss
scripts/: build-local.cmd  build-local.sh  download-lsp-servers.ts  update-docs.sh
src/: App.vue
src/components/: CommandPalette.vue  LSPSetupDialog.vue  TelemetryConsentDialog.vue
src/components/Agents/: AgentsPanel.vue  index.ts
src/components/Analysis/: DependencyPanel.vue  TodoPanel.vue
src/components/BottomPanel/: BottomPanel.vue  OutputLog.vue  ProblemsPanel.vue  TerminalPanel.vue  index.ts
src/components/Debug/: BreakpointsPanel.vue  CallStackPanel.vue  DebugConsole.vue  DebugPanel.vue  DebugSidebarPanel.vue  DebugToolbar.vue  LaunchConfigDialog.vue  RunDebugBar.vue  VariableItem.vue  VariablesPanel.vue  WatchPanel.vue  index.ts
src/components/Extensions/: ExtensionWebviewFrame.vue  ExtensionsPanel.vue
src/components/Git/: CommitBox.vue  GitPanel.vue
src/components/Intelligence/: ImpactAnalysisPanel.vue
src/components/Merge/: ThreeWayMergeEditor.vue
src/components/Refactor/: RefactorMenu.vue
src/components/Remote/: RemoteExplorer.vue
src/components/StatusBar/: IntelligenceModeIndicator.vue  index.ts
src/logos/: DiagnosticsManager.ts  IntelligenceManager.ts  index.ts
src/logos/providers/: DefinitionProvider.ts  HoverProvider.ts  SignatureHelpProvider.ts
src/services/debug/: inlineValuesProvider.ts
src/services/integrations/: index.ts  slack.ts
src/services/language/: DaemonLanguageService.ts  utils.ts
src/services/lsp/: DiagnosticsManager.ts  IntelligenceManager.ts  LSPClientService.ts  depsindex.ts  index.ts  postcommit.ts
src/stores/: agents.ts  bottomPanel.ts  debug.ts  devops.ts  extensionUi.ts  extensions.ts  index.ts  intelligence.ts  mergereqstreview.ts  settings.ts  theme.ts  todos.ts
src/styles/: main.css
src/types/: agents.ts  cicd.ts  daemon.ts  editor.ts  extensions.ts  index.ts  intelligence.ts  logos-wasm.d.ts  settings.ts
src/views/: DiffEditorView.vue  EditorView.vue  SettingsView.vue  TerminalView.vue
tests/unit/stores/: git.test.ts  (+1 more)
(+10 files in other folders)
