[workspace]
resolver = "2"
members = [
    "crates/logos-core",
    "crates/logos-parser",
    "crates/logos-semantic",
    "crates/logos-index",
    "crates/logos-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Logos Team"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"

# Internal crates
logos-core = { path = "crates/logos-core" }
logos-parser = { path = "crates/logos-parser" }
logos-semantic = { path = "crates/logos-semantic" }
logos-index = { path = "crates/logos-index" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"