[package]
name = "logos-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Language service daemon for Logos IDE"

[[bin]]
name = "logos-daemon"
path = "src/main.rs"

[dependencies]
logos-core.workspace = true
logos-parser.workspace = true
logos-semantic.workspace = true
logos-index.workspace = true
logos-refactor.workspace = true
serde.workspace = true
serde_json.workspace = true

# Daemon-specific dependencies
log = "0.4"
env_logger = "0.11"
